fixed nav bar positioning and horizontal scrolling white space

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@
 nav {
   width: 100%;
   padding: 10px 0;
+  position: absolute !important;
 }
 
 nav a {
